--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "lodash": "^4.17.4",
     "react-overlays": "^0.6.0",
     "react-prop-types": "^0.4.0",
+    "react-tappable": "^0.8.4",
     "uncontrollable": "^3.3.1 || ^4.0.0",
     "warning": "^2.0.0"
   }
