--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-big-calendar-touch",
   "version": "0.13.1",
-  "description": "Forked from react-big-calendar. Added touch events and replaced html5 backend with touch backend. WIP and currently very buggy.",
+  "description": "Forked from react-big-calendar. Created a touch version of the dradAndDrop add-on.",
   "author": "Jason Quense <monastic.panic@gmail.com>",
   "repository": "lucidsif/react-big-calendar-touch",
   "license": "MIT",
